# Curly-scrapper

./: CMakeLists.txt  main.c  mainCurly.c  setupDirCurly.c
includes/: mainCurly.h  setupDirCurly.h
